--- a/01-formal-problem-statement/template/skeleton/skeleton.Rmd
+++ b/01-formal-problem-statement/template/skeleton/skeleton.Rmd
@@ -3,12 +3,12 @@ title: "Formal Problem Statement (FPS)"
 author: 'Author: Rajat Jain'
 date: 'Last Updated: `r Sys.Date()`'
 output:
+  pdf_document:
+    toc: yes
   html_document:
     theme: lumen
     toc: yes
     toc_float: yes
-  pdf_document:
-    toc: yes
 ---
 
 ```{r, echo=FALSE}
@@ -28,52 +28,60 @@ htmltools::img(src = knitr::image_uri(file.path("logo.jpg")),
 &nbsp;
 
 ## 2. Key Stakeholders
-<!-- Define: **Who** -->
+```{r, echo=FALSE}
+#Define: **Who**
+#"Business Owners" are the key stakeholders requesting the solution of the problem.
+#"Customers / Consumers" are the people who will consume the solution.
+#*Note*: It is often possible that the Business Owners and Customers are the same set of people.
+```  
 ### a. Business Owners
-<!-- "Business Owners" are the key stakeholders requesting the solution of the problem. -->
 ### b. Customers
-<!-- "Customers / Consumers" are the people who will consume the solution.
-*Note*: It is often possible that the Business Owners and Customers are the same set of people.
--->
 
 &nbsp;
 
 ## 3. Impact
-<!-- Define: **Why**
-Quantify the importance and impact of this project. What happens if we do not do it.
-Have both measurable and indirect impacts listed.
--->
+```{r, echo=FALSE}
+#Define: **Why**
+#Quantify the importance and impact of this project. What happens if we do not do it.
+#Have both measurable and indirect impacts listed.
+```
 
 &nbsp;
 
 ## 4. Execution Plan
-<!-- Define: **How**
-Remember, only define "how", not implement it. Do NOT discuss implementation details like the type of models which will be used in the solution.
--->
+```{r, echo=FALSE}
+#Define: **How**
+#Remember, only define "how", not implement it. Do NOT discuss implementation details like the type of models which will be used in the solution.
+```
 ### a. Data Sources
-<!-- If it known where the data will come from, mention it. Remember, do not write the details of how the data will be cleaned up and/or processed. Just list the high level sources and nature of data -->
+```{r, echo=FALSE}
+#If it known where the data will come from, mention it. Remember, do not write the details of how the data will be cleaned up and/or processed. Just list the high level sources and nature of data.
+```
 
 &nbsp;
 
 ## 5. Deployment Plan
-<!-- Define: **How and Where**
-Discuss how the models built will be deployed and where. What will be the process to test/update the models?
--->
+```{r, echo=FALSE}
+#Define: **How and Where**
+#Discuss how the models built will be deployed and where. What will be the process to test/update the models?
+```
 
 &nbsp;
 
 ## 6. Resources
-<!-- It may make sense to estimate the amount of resources this project will require. If the project requires any specialized environment or hardware to be deployed and run, mention it.
--->
+```{r, echo=FALSE}
+#It may make sense to estimate the amount of resources this project will require. If the project requires any specialized environment or hardware to be deployed and run, mention it.
+```
 ### a. Human Resources
 ### b. Machine Resources
 
 &nbsp;
 
 ## 7. Major Milestones
-<!-- Define: **When**
-Define an ETA for each of the below mentioned stages of the project lifecycle.
--->
+```{r, echo=FALSE}
+#Define: **When**
+#Define an ETA for each of the below mentioned stages of the project lifecycle.
+```
 ### a. **Ingest**:
 Data clean-up and ingestion will be completed by MM/DD/YYYY.
 
@@ -92,15 +100,17 @@ Plans to iterate for next version.
 &nbsp;
 
 ## 8. Success Criteria
-<!-- Define: Measurement
-The business measurement. For example, CTR should increase by X%.
--->
+```{r, echo=FALSE}
+#Define: Measurement
+#The business measurement. For example, CTR should increase by X%.
+```
 The success of this project will be measured by ___ . It's value should increase/decrease by __ %.
 
 &nbsp;
 
 ## 9. Risks
-<!-- Define: Possibilities when things go unexpectedly
--->
+```{r, echo=FALSE}
+#Define: Possibilities when things go unexpectedly
+#Risk mitigation plan, if any.
+```
 The prossible risks to this project are...
-<!-- Risk mitigation plan, if any. -->
