Updated the FPS with relevant content - First complete draft

--- a/01-formal-problem-statement/FPS/FPS.Rmd
+++ b/01-formal-problem-statement/FPS/FPS.Rmd
@@ -2,13 +2,14 @@
 title: "Formal Problem Statement (FPS)"
 author: 'Author: Rajat Jain'
 date: 'Last Updated: `r Sys.Date()`'
+time: 'Time Spent: 8 Hrs'
 output:
-  pdf_document:
-    toc: yes
   html_document:
     theme: lumen
     toc: yes
     toc_float: yes
+  pdf_document:
+    toc: yes
 ---
 
 ```{r, echo=FALSE}
@@ -18,7 +19,6 @@ htmltools::img(src = knitr::image_uri(file.path("logo.jpg")),
 
 ```
 ```{r, echo=FALSE}
-# TIME SPENT: 8Hrs.
 # HINT: blocks like this one will not show in the final knit document.
 # These are just for help while building the content for the FPS.
 ```
@@ -32,7 +32,14 @@ htmltools::img(src = knitr::image_uri(file.path("logo.jpg")),
 # It should be a business description of the problem statement, not the technical aspects
 # describing the model.
 ```
+Adobe sells its Creative Cloud products as various single apps and bundled subscription plans. One of such bundle is Photography plan which bundles Adobe Photoshop with Adobe Lightroom and a few other services. It is one of Adobe's most popular packages and was originally tailored to bring in more professional as well as amateur photographers into the family by offering discounted prices on the software of their need. From the customers’ perspective, it is also a good way to get cheaper Photoshop than buying it as a single app subscription. [Pricing page](https://www.adobe.com/creativecloud/plans.html) has more details. Hence it attracts a lot of non-photographers as well.
 
+Adobe currently uses the information from the plan purchased to run targeted marketing campaigns and to send learning tutorial recommendations to the customers to increase their engagement in-product; and to eventually increase customer retention. An example campaign could be, identified photographers may receive a marketing communication reminding them that they also have cloud storage associated with their Adobe account and should use it to reliably save their photos online. However, these campaigns are often found to be less effective on photography plan customers. Inacurate targeting due to a mix of photographers and other customers is often understood to be the reason behind it.
+
+To acurately target photographers, we need to classify the customers buying this bundle into “true” photographers v/s “non” photographers. If we are able to do that, the business will be able to,
+
+a. increase the effectiveness of the campaigns targeted towards photographers.
+b. steer other customers towards the right products or plans for them and increase overall engagement.
 &nbsp;
 
 ## 2. Key Stakeholders
@@ -40,12 +47,18 @@ htmltools::img(src = knitr::image_uri(file.path("logo.jpg")),
 # HINT:
 # Define: **Who**
 # "Business Owners" are the key stakeholders requesting the solution of the problem.
+# "SMEs" are those who know the domain well.
 # "Customers / Consumers" are the people who will consume the solution.
 # *Note*: It is often possible that the Business Owners and Customers are the same set of people.
 ```  
 ### a. Business Owners
-### b. Customers
+Adobe's Creative Cloud Product & Marketing team led by Juanjo will sign-off on the requirements of this project and will refine the output requirements if needed.
 
+### b. SMEs
+Photoshop and Lightroom Product Management and Product Analytics team are the subject matter experts on the features of Photoshop and Lightroom. They also are the domain expert on what kind of features are used by different classes of their users. Damon Lapoint will help us understand that domain knowledge and incorporate it into data cleansing and model building.
+
+### c. Customers
+The output of this project will be primarily consumed by the Photography Product Marketing team at Adobe lead by Sr. Director Jim. Additionally, Johnson's Creative Cloud Learning Content team will be responsible for running the campaigns to target “true” Photographers with content encouraging them to engage with Lightroom CC product.
 &nbsp;
 
 ## 3. Impact
@@ -55,7 +68,10 @@ htmltools::img(src = knitr::image_uri(file.path("logo.jpg")),
 # Quantify the importance and impact of this project. What happens if we do not do it.
 # Have both measurable and indirect impacts listed.
 ```
+Being able to identify “true” photographers will help Adobe marketing team by
 
+* enabling them to target marketing communication to the correct set of users. For example, sending a tutorial link on "how to organize your photos in Lightroom" to a UX/UI designer who purchased Photography plan to get access to Photoshop for his/her work, may be a waste of Adobe's marketing dollars and users' screen time.
+* enabling them to measure accurately and increase users' engagement with products and eventually steer the “non” photographers to the plans which may be more suitable for them. Thus increasing retention and eventually ARR in longer term.
 &nbsp;
 
 ## 4. Execution Plan
@@ -65,6 +81,8 @@ htmltools::img(src = knitr::image_uri(file.path("logo.jpg")),
 # Remember, only define "how", not implement it. Do NOT discuss implementation details like
 # the type of models which will be used in the solution.
 ```
+We will build models based on various member attributes and their usage of the produts and product features, to segment Paid Photography segment users into “true” Photographers and “non” Photographers segments. The output of this project will be a table consisting of all qualifying members with their corresponding segment at a given snapshot date/time.
+
 ### a. Data Sources
 ```{r, echo=FALSE}
 # HINT:
@@ -72,7 +90,13 @@ htmltools::img(src = knitr::image_uri(file.path("logo.jpg")),
 # of how the data will be cleaned up and/or processed. Just list the high level sources and
 # nature of data.
 ```
+The following major data sources are available to us:
 
+* Members' profile consisting various attributes like geo location, plan purchased etc. This data resides in Adobe's financial systems and is synched over to a centralized Hadoop cluster.
+* Members' product and product feature usage data collected by various Adobe apps running on users' machines.
+* Results from a survey where users have identified themselves into various job functions.
+
+All the above data sources have been classified as "Company Confidential" or "Customer Confidential" data and may not be exported out of Adobe's enterprise network.
 &nbsp;
 
 ## 5. Deployment Plan
@@ -82,7 +106,7 @@ htmltools::img(src = knitr::image_uri(file.path("logo.jpg")),
 # Discuss how the models built will be deployed and where. What will be the process to 
 # test/update the models?
 ```
-
+Model(s) will live on-prem on Adobe owned enterprise wide data lake. They will be re-trained every week to adjust for the changes to the market, offers and customer behaviors.
 &nbsp;
 
 ## 6. Resources
@@ -92,8 +116,10 @@ htmltools::img(src = knitr::image_uri(file.path("logo.jpg")),
 # project requires any specialized environment or hardware to be deployed and run, mention it.
 ```
 ### a. Human Resources
-### b. Machine Resources
+We will need one data scientist to work full time on this project for the estimated period of time.
 
+### b. Machine Resources
+No special hardware is required at this time based on the estimated volume. For future iterations, specialized hardware or data processing platforms may be required depending on the growth in size of data and desired frequency of model update.
 &nbsp;
 
 ## 7. Major Milestones
@@ -102,21 +128,30 @@ htmltools::img(src = knitr::image_uri(file.path("logo.jpg")),
 # Define: **When**
 # Define an ETA for each of the below mentioned stages of the project lifecycle.
 ```
+The first version of the project will take 7 weeks to complete.
+
+| Estimated Start Date | ETA        |
+|:--------------------:|:----------:|
+| 04/11/2018           | 05/30/2018 |
+   
+During this period, the following major milestones will be tracked.
+
 ### a. **Ingest**:
-Data clean-up and ingestion will be completed by MM/DD/YYYY.
+Data exploration, clean-up and ingestion will take three weeks and is estimated to be completed by 05/02/2018.
 
 ### b. **Model**:
-Models will be built on the ingested data and will be available for validation by MM/DD/YYYY.
+Model(s) will be built on the ingested data and will take three weeks. The will be available for validation by 05/23/2018.
 
 ### c. **Validate**:
-Scoring to be tested on live traffic by MM/DD/YYYY.
+No validation testing on production data planned yet.
 
 ### d. **Deploy**:
-If accepted, the model(s) will be deployed to production by MM/DD/YYYY.
+If accepted, the model(s) will be deployed to production. Deployment plan is as discussed earlier. Deployment process will take seven days. ETA: 06/30/2018.
 
 ### e. **Iterate**:
-Plans to iterate for next version.
+Plans to iterate for next version, if any. TBD.
 
+*All dates are tentatively estimated based on the expected start date. Exact milestone dates will be known when the project starts.
 &nbsp;
 
 ## 8. Success Criteria
@@ -125,8 +160,9 @@ Plans to iterate for next version.
 # Define: Measurement
 # The business measurement. For example, CTR should increase by X%.
 ```
-The success of this project will be measured by ___ . It's value should increase/decrease by __ %.
+The ultimate desired business impact from this project is the lift in customer's engagement with Adobe products and eventual lift in retention rates. However, both of these are long term measure and may not be tangible in short term. 
 
+The success of this project will be measured by the accuracy of classifying “true” photographers among the paid photography plan customer base. We expect to achieve 70% or more accuracy to be successful.
 &nbsp;
 
 ## 9. Risks
@@ -135,4 +171,8 @@ The success of this project will be measured by ___ . It's value should increase
 # Define: Possibilities when things go unexpectedly
 # Risk mitigation plan, if any.
 ```
-The prossible risks to this project are...
+The possible risks to this project are as below:
+
+* Product Marketing team may decide to not use the classification in running their campaign if the accuracy of the model(s) is less than acceptable.
+* Adobe products like Photoshop tend to have thousands of major and minor instrumented features, localized into many languages. Using the data as available may not help much and may even be sparse. To avoid this, we would need to build a taxonomy of features with help from the product SMEs.
+* Since the primary data for this project is customer's product usage, we may not be able to classify the users with no or low usage.
