--- a/01-formal-problem-statement/FPS/FPS.Rmd
+++ b/01-formal-problem-statement/FPS/FPS.Rmd
@@ -36,10 +36,7 @@ Adobe sells its Creative Cloud products as various single apps and bundled subsc
 
 Adobe currently uses the information from the plan purchased to run targeted marketing campaigns and to send learning tutorial recommendations to the customers to increase their engagement in-product; and to eventually increase customer retention. An example campaign could be, identified photographers may receive a marketing communication reminding them that they also have cloud storage associated with their Adobe account and should use it to reliably save their photos online. However, these campaigns are often found to be less effective on photography plan customers. Inacurate targeting due to a mix of photographers and other customers is often understood to be the reason behind it.
 
-To acurately target photographers, we need to classify the customers buying this bundle into “true” photographers v/s “non” photographers. If we are able to do that, the business will be able to,
-
-a. increase the effectiveness of the campaigns targeted towards photographers.
-b. steer other customers towards the right products or plans for them and increase overall engagement.
+To acurately target photographers, we need to classify the customers buying this bundle into “true” photographers v/s “non” photographers.
 &nbsp;
 
 ## 2. Key Stakeholders
@@ -52,13 +49,13 @@ b. steer other customers towards the right products or plans for them and increa
 # *Note*: It is often possible that the Business Owners and Customers are the same set of people.
 ```  
 ### a. Business Owners
-Adobe's Creative Cloud Product & Marketing team led by Juanjo will sign-off on the requirements of this project and will refine the output requirements if needed.
+Adobe's Creative Cloud Product & Marketing team led by Juanjo will sign-off on the requirements of this project and will refine the output requirements, if needed.
 
 ### b. SMEs
 Photoshop and Lightroom Product Management and Product Analytics team are the subject matter experts on the features of Photoshop and Lightroom. They also are the domain expert on what kind of features are used by different classes of their users. Damon Lapoint will help us understand that domain knowledge and incorporate it into data cleansing and model building.
 
 ### c. Customers
-The output of this project will be primarily consumed by the Photography Product Marketing team at Adobe lead by Sr. Director Jim. Additionally, Johnson's Creative Cloud Learning Content team will be responsible for running the campaigns to target “true” Photographers with content encouraging them to engage with Lightroom CC product.
+The output of this project will primarily be consumed by the Photography Product Marketing team at Adobe lead by Sr. Director Jim. Additionally, Johnson's Creative Cloud Learning Content team will be responsible for running the campaigns to target “true” photographers with content encouraging them to engage with Lightroom CC product.
 &nbsp;
 
 ## 3. Impact
@@ -68,10 +65,11 @@ The output of this project will be primarily consumed by the Photography Product
 # Quantify the importance and impact of this project. What happens if we do not do it.
 # Have both measurable and indirect impacts listed.
 ```
-Being able to identify “true” photographers will help Adobe marketing team by
+Being able to identify “true” photographers will help the business will be able to,
 
-* enabling them to target marketing communication to the correct set of users. For example, sending a tutorial link on "how to organize your photos in Lightroom" to a UX/UI designer who purchased Photography plan to get access to Photoshop for his/her work, may be a waste of Adobe's marketing dollars and users' screen time.
-* enabling them to measure accurately and increase users' engagement with products and eventually steer the “non” photographers to the plans which may be more suitable for them. Thus increasing retention and eventually ARR in longer term.
+a. increase the effectiveness of the campaigns targeted towards photographers.
+b. steer other customers towards the right products or plans for them and increase overall engagement.
+c. measure accurately and increase customer's engagement with products and eventually increasing retention in longer term.
 &nbsp;
 
 ## 4. Execution Plan
@@ -81,7 +79,7 @@ Being able to identify “true” photographers will help Adobe marketing team b
 # Remember, only define "how", not implement it. Do NOT discuss implementation details like
 # the type of models which will be used in the solution.
 ```
-We will build models based on various member attributes and their usage of the produts and product features, to segment Paid Photography segment users into “true” Photographers and “non” Photographers segments. The output of this project will be a table consisting of all qualifying members with their corresponding segment at a given snapshot date/time.
+We will build models based on various customer attributes and their usage of the produts and product features, to segment paid photography plan customers into “true” Photographer and “non” Photographer segments. The output of this project will be a table on Hadoop consisting of all qualifying members with their corresponding segment at a given snapshot date/time.
 
 ### a. Data Sources
 ```{r, echo=FALSE}
@@ -92,9 +90,9 @@ We will build models based on various member attributes and their usage of the p
 ```
 The following major data sources are available to us:
 
-* Members' profile consisting various attributes like geo location, plan purchased etc. This data resides in Adobe's financial systems and is synched over to a centralized Hadoop cluster.
-* Members' product and product feature usage data collected by various Adobe apps running on users' machines.
-* Results from a survey where users have identified themselves into various job functions.
+* Customer profile consisting various attributes like geo location, plan purchased etc. This data resides in Adobe's financial systems and is synched over to a centralized Hadoop cluster.
+* Customer's product and product feature usage data collected by various Adobe apps running on their machines.
+* Results from a survey where customers have self-classified themselves into various job functions.
 
 All the above data sources have been classified as "Company Confidential" or "Customer Confidential" data and may not be exported out of Adobe's enterprise network.
 &nbsp;
@@ -119,7 +117,7 @@ Model(s) will live on-prem on Adobe owned enterprise wide data lake. They will b
 We will need one data scientist to work full time on this project for the estimated period of time.
 
 ### b. Machine Resources
-No special hardware is required at this time based on the estimated volume. For future iterations, specialized hardware or data processing platforms may be required depending on the growth in size of data and desired frequency of model update.
+No special hardware is required at this time based on the estimated data volume. For future iterations, specialized hardware or data processing platforms may be required depending on the growth in size of data and desired frequency of model update.
 &nbsp;
 
 ## 7. Major Milestones
@@ -128,7 +126,7 @@ No special hardware is required at this time based on the estimated volume. For 
 # Define: **When**
 # Define an ETA for each of the below mentioned stages of the project lifecycle.
 ```
-The first version of the project will take 7 weeks to complete.
+The first version of the project will take seven weeks to complete.
 
 | Estimated Start Date | ETA        |
 |:--------------------:|:----------:|
@@ -137,13 +135,13 @@ The first version of the project will take 7 weeks to complete.
 During this period, the following major milestones will be tracked.
 
 ### a. **Ingest**:
-Data exploration, clean-up and ingestion will take three weeks and is estimated to be completed by 05/02/2018.
+Data exploration, clean-up, ingestion and feature generation will take three weeks and is estimated to be completed by 05/02/2018.
 
 ### b. **Model**:
-Model(s) will be built on the ingested data and will take three weeks. The will be available for validation by 05/23/2018.
+Model(s) will be built on the ingested data and will take three weeks. They will be available for validation(if required) by 05/23/2018.
 
 ### c. **Validate**:
-No validation testing on production data planned yet.
+No validation testing on production data is planned yet.
 
 ### d. **Deploy**:
 If accepted, the model(s) will be deployed to production. Deployment plan is as discussed earlier. Deployment process will take seven days. ETA: 06/30/2018.
